<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/timeline_title" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_event_available"
            android:title="@string/panels_title" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/speakers_title" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/more_title" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/contacts_title" />
    </group>
</menu>